<resources>
    <string name="app_name">Yo Construyo</string>

    <string name="action_refresh">Cargar</string>
    <string name="action_profile">Perfil</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="action_about">Acerca de</string>
    <string name="action_licences">Licencias</string>

    <string name="error_loading_modules">
        Ocurrió un error al cargar el contenido.
        Revisa tu conexión a internet.
    </string>

    <string name="error_loading_submodules">
        Ocurrió un error al cargar el contenido.
        Revisa tu conexión a internet.
    </string>

    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_confirm">Confirmar contraseña</string>
    <string name="action_login">Iniciar sesión</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="action_forgot_password">Olvide mi contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_last_name">Apellido</string>
    <string name="hint_country">País</string>
    <string name="hint_state">Estado</string>
    <string name="hint_city">Ciudad</string>

    <string-array name="gender">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <string-array name="country">
        <item>México</item>
        <item>Argentina</item>
    </string-array>

    <string-array name="state">
        <item>-</item>
        <item>Nuevo León</item>
    </string-array>

    <string-array name="education">
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Preparatoria</item>
        <item>Licenciatura</item>
        <item>Posgrado</item>
    </string-array>

    <string name="login_error">Ocurrió un error al iniciar sesión. Intenta de nuevo más tarde</string>
    <string name="invalid_credentials">Email o contraseña incorrecta.</string>
    <string name="iniciando_sesion">Iniciando sesión</string>
    <string name="registrando">Registrando</string>
    <string name="porfavor_espera">Por favor espera</string>

    <string name="about_description">
        CEMEX y el Tecnológico de Monterrey desarrollaron este manual de autoconstrucción en el que,
        paso a paso y de manera sencilla, se presenta el proceso constructivo completo para llegar a
        tener una casa terminada y realizada con criterios sostenibles.
    </string>

</resources>
